# WebScrapingAnalytics_Imobiliario

./: README.md  actions.py  browser_provider_original.py  pyproject.toml  teste.csv
edge_profile/: DevToolsActivePort  Local State  RevisitationBloomfilter  first_party_sets.db
edge_profile/Ad Blocking/: blocklist
edge_profile/Default/: History  Preferences  Secure Preferences  Visited Links  Web Data
edge_profile/Default/Asset Store/assets.db/: LOG  LOG.old
edge_profile/Default/Cache/Cache_Data/: data_0  data_1  data_2  index
edge_profile/Default/EdgeCoupons/coupons_data.db/: LOG  (+4 more)
edge_profile/Default/EntityExtraction/: domains_config.json
edge_profile/Default/Extension Rules/: LOG
edge_profile/Default/Extension Scripts/: LOG
edge_profile/Default/Extension State/: LOG  LOG.old
edge_profile/Default/Network/: Cookies  Network Persistent State  Reporting and NEL  TransportSecurity
edge_profile/Default/Site Characteristics Database/: LOG  LOG.old
edge_profile/Default/shared_proto_db/: LOG  LOG.old
edge_profile/Edge Cloud Config/: CloudConfigLog  OperationConfig
edge_profile/GrShaderCache/: data_1  index
edge_profile/GraphiteDawnCache/: data_1  index
edge_profile/ShaderCache/: data_1  index
src/extract_data_ibge/: p01_extract_municipios.py  p01_update_municipios_postgres.py  p02_extract_pib.py  p02_update_pib_postgres.py  p99_extract_pesquisas.py  read_me.txt
src/utils/: browser_provider.py  functions_scrap.py  save_dataframe_csv.py  save_dataframe_postgres.py
src/webscraping_imobiliario/: extract_imoveis.py  update_imoveis_postgres.py
(+11 files in other folders)
