[project]
name = "webscraping-imobiliario"
version = "0.1.0"
description = ""
authors = [
    {name = "Gabriel de Albuquerque Araujo",email = "gabriel.albuquerque05@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "curl-cffi (>=0.10.0,<0.11.0)",
    "brotli (>=1.1.0,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "selenium (>=4.29.0,<5.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "unidecode (>=1.3.8,<2.0.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]

[tool.poetry]
packages = [{include = "webscraping_imobiliario", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
